# OGLVoid2D_Ubuntu

./: CMakeLists.txt  README.md
libs/glad/: glad.h
resources/: default.frag  default.vert  texture.frag  texture.vert
src/: GAO.h  Lineal.h  Main.cpp  Pixel.h  RenderBatch.hpp  Renderer.h  Shader.h  glad.c  utilDefs.h
